kubernetes/cloud/applications/cilium/nlb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nlb-cilium-gw
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.z3cyber.tech"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: z3cyber-tech-cert-tls
            namespace: gateway
